# tauro

./: .gitignore  .gitmodules  CLAUDE.md  MIGRATION_GUIDE.md  README.md  README_REFACTORED.md  env_setup.sh  pyproject.toml
.calibrations/robots/so100_follower/: left.json  right.json
docs/: build_librealsense.md
examples/: remote_control_example.py
scripts/: calibrate_robot.py  change_motor_id.py  compile_proto.py  control_two_robots_async.py  debug_mink_movement.py  debug_robot_test.py  download_model.py  goto_zero_position.py  grpc_stream_camera.py  mujoco_scene_debugger.py  requirements_realsense.txt  stream_camera.py  stream_cameras.py  stream_realsense.py  teleop.py  test_dual_robots.py  test_ee_no_gripper.py  test_key_press.py  test_keyboard_interactive.py  test_keyboard_teleop.py  test_keyboard_teleop_simple.py  test_mink_ik.py  test_mink_ik_fixed.py  test_mink_ik_standalone.py  test_robot_control.py  test_robot_no_gripper.py  test_scene_builder.py  test_sshkeyboard_teleop.py
scripts/static/: grpc_stream_camera.html  stream_camera.html  stream_realsense.html
tauro/: __init__.py  robot.py
tauro/common/: __init__.py  constants.py  errors.py
tauro/common/model/: kinematics.py
tauro/common/motors/: __init__.py  motors_bus.py
tauro/common/motors/cyber_gear/: parameters.py  utils.py
tauro/common/motors/feetech/: __init__.py  feetech.py  tables.py
tauro/common/robots/: __init__.py  robot.py  utils.py
tauro/common/robots/so100_follower/: __init__.py  config_so100_follower.py  so100_follower.py  so100_follower_end_effector.py
tauro/common/robots/so101_follower/: config_so101_follower.py  so101_follower.py
tauro/common/teleoperators/: __init__.py  teleoperator.py
tauro/common/teleoperators/keyboard/: configuration_keyboard.py  teleop_keyboard.py
tauro/common/utils/: buffer.py  control_utils.py  import_utils.py  random_utils.py  transition.py  utils.py
tauro/motor_interface/cyber_gear/: motor_controller.py
tauro_common/: constants.py
tauro_common/kinematics/: __init__.py  mink_kinematics.py
tauro_common/model/: kinematics.py
tauro_common/models/so_arm100/: scene_two_arms.xml  so_arm100.xml
tauro_common/proto/: camera_service.proto  camera_service_pb2.py  camera_service_pb2_grpc.py  robot_service.proto  robot_service_pb2.py  robot_service_pb2_grpc.py
tauro_common/types/: action_spaces.py  robot_types.py
tauro_common/utils/: proto_utils.py  utils.py
tauro_edge/: __main__.py  main.py  simulator.py
tauro_edge/configs/: robot_ports.yaml  sensor_ports.yaml  sim_four_robots.yaml  sim_single_robot.yaml  sim_two_robots.yaml  simulated_robots.yaml
tauro_edge/motors/: __init__.py  motors_bus.py
tauro_edge/motors/cyber_gear/: __init__.py  event_emitter.py  motor_controller.py  state.py  utils.py
tauro_edge/motors/feetech/: feetech.py
tauro_edge/robots/: config.py  robot.py  utils.py
tauro_edge/robots/simulated/: __init__.py  simulated_robot.py
tauro_edge/robots/so100_follower/: __init__.py  config_so100_follower.py  so100_follower.py  so100_follower_end_effector.py
tauro_edge/robots/so101_follower/: __init__.py  config_so101_follower.py  so101_follower.py
tauro_edge/sensors/: __init__.py  camera_base.py  realsense_camera.py  usb_camera.py
tauro_edge/server/: __init__.py  multi_robot_simulator_server.py  robot_server.py  sensor_server.py  simulator_server.py
tauro_edge/sim_scenes/: base_scene.xml  empty_scene.xml  tmp5870b0fq.xml  tmp_80spo_z.xml  tmp_btk8wi1.xml  tmpbkmp96nq.xml  tmpd3_75x33.xml  tmpnt7wd_7s.xml  tmprw8yz9fm.xml  two_robots.xml
tauro_edge/utils/: robot_config.py  scene_builder.py
tauro_inference/client/: __init__.py  remote_robot.py  robot_client.py
tauro_inference/teleop/: __init__.py  config.py  keyboard_remote.py  teleoperator.py
tauro_inference/teleop/keyboard/: __init__.py  configuration_keyboard.py  teleop_keyboard.py
tests/common/: test_kinematics_edge_cases.py  test_kinematics_performance.py  test_mink_kinematics.py  test_proto_utils.py
tests/edge/: test_robot_server.py
tests/inference/: test_robot_client.py
