[project]
name = "tauro"
version = "0.1.0"
description = "A Python package for robot control"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "opencv-python>=4.5.0", 
    "pyserial",
    "deepdiff",
    "tqdm",
    "scipy",
    "draccus",
    "sshkeyboard",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.9",
    "pre-commit>=3.5.0",
    "ipython",
]
feetech = ["feetech-servo-sdk>=1.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tauro"]

# [tool.ruff]
# # Enable pycodestyle (E), pyflakes (F), isort (I), plus all recommended rules (RUF)
# select = ["F", "I", "RUF"]
# ignore = ["E501"]  # Disable line too long, let formatter handle it
# line-length = 88
# fix = true
# extend-exclude = [
#     ".bzr",
#     ".direnv",
#     ".eggs",
#     ".git",
#     ".git-rewrite",
#     ".hg",
#     ".mypy_cache",
#     ".nox",
#     ".pants.d",
#     ".pytype",
#     ".ruff_cache",
#     ".svn",
#     ".tox",
#     ".venv",
#     "__pypackages__",
#     "_build",
#     "buck-out",
#     "build",
#     "dist",
#     "node_modules",
#     "venv",
# ]

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "space"
# skip-magic-trailing-comma = false
# line-ending = "auto"

# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E501"]

# [tool.ruff.lint]
# fixable = ["F", "I", "RUF"]
# unfixable = []
